; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/extr_geode_32.c_geode_gpio_clear.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/extr_geode_32.c_geode_gpio_clear.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GEODE_DEV_GPIO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @geode_gpio_clear(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* @GEODE_DEV_GPIO, align 4
  %7 = call i32 @geode_get_dev_base(i32 %6)
  store i32 %7, i32* %5, align 4
  %8 = load i32, i32* %5, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %11, label %10

10:                                               ; preds = %2
  br label %35

11:                                               ; preds = %2
  %12 = load i32, i32* %3, align 4
  %13 = and i32 %12, 65535
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %23

15:                                               ; preds = %11
  %16 = load i32, i32* %3, align 4
  %17 = and i32 %16, 65535
  %18 = shl i32 %17, 16
  %19 = load i32, i32* %5, align 4
  %20 = load i32, i32* %4, align 4
  %21 = add i32 %19, %20
  %22 = call i32 @outl(i32 %18, i32 %21)
  br label %23

23:                                               ; preds = %15, %11
  %24 = load i32, i32* %3, align 4
  %25 = and i32 %24, -65536
  store i32 %25, i32* %3, align 4
  %26 = load i32, i32* %3, align 4
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %35

28:                                               ; preds = %23
  %29 = load i32, i32* %3, align 4
  %30 = load i32, i32* %5, align 4
  %31 = add nsw i32 %30, 128
  %32 = load i32, i32* %4, align 4
  %33 = add i32 %31, %32
  %34 = call i32 @outl(i32 %29, i32 %33)
  br label %35

35:                                               ; preds = %10, %28, %23
  ret void
}

declare dso_local i32 @geode_get_dev_base(i32) #1

declare dso_local i32 @outl(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
